# beesint-threat-report

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  cron-etl.yml
docs/: data-anomaly-detection.md
src/beesint_threat_report/: backfill.py  config.py  orchestrate.py
styles/: report.css
templates/: macros.html.j2  report.html.j2
templates/partials/: _breaches.html.j2  _c2_infra.html.j2  _cover.html.j2  _cve_critical.html.j2  _cwe_breakdown.html.j2  _kev.html.j2  (+11 more)
tests/: conftest.py  test_backfill.py  test_cache_store.py  test_extract_breachdirectory.py  test_extract_epss.py  test_extract_feodo.py  test_extract_greynoise.py  test_extract_hibp.py  test_extract_kev.py  test_extract_nvd.py  test_extract_openphish.py  test_extract_phishtank.py  test_extract_ransomware_live.py  test_extract_shodan_internetdb.py  test_extract_spamhaus_drop.py  test_extract_urlhaus.py  test_load_json_writer.py  test_load_mitre_attack_map.py  test_load_parquet_writer.py  test_load_pdf_renderer.py  test_orchestrate_e2e.py  test_orchestrate_new_sources.py  test_pdf_context.py  test_placeholder.py  test_publish_webhook.py  test_threatfox.py  test_transform_breaches.py  test_transform_dedup.py  test_transform_diffing.py  test_transform_geoloc.py  test_transform_kpis.py  test_transform_mttk.py  test_transform_openphish_merge.py  test_transform_phishtank_merge.py  test_transform_ranking.py  test_transform_ransomware.py  test_validate_frames.py  test_validate_schemas.py
(+46 files in other folders)
