[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beesint-threat-report"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.17",
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "pandera[polars]>=0.20",
    "s3fs>=2024.10",
    "tenacity>=9.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "python-json-logger>=3.0",
    "sentry-sdk>=2.0",
    "jinja2>=3.1",
    "weasyprint>=62.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
